fix text and background color contrast in DSA section

--- a/docs/_sass/dsa-styles.sass
+++ b/docs/_sass/dsa-styles.sass
@@ -172,12 +172,12 @@ $gray-button: darken($gray, 30%)
 
 .section
   &:nth-of-type(even)
-    background: #f5f5f5
+    background: #f7f7f7
     box-shadow: 0 5px 20px rgba(0, 0, 0, .2)
 
 .home
   .what-is-dsa
-    color: $gray
+    color: #7a7a7a
     font-weight: 600
 
     h2
@@ -186,7 +186,7 @@ $gray-button: darken($gray, 30%)
 
     p
       font-size: 18px
-      margin-bottom: 2%
+      margin-bottom: 1%
       line-height: 1.8
 
     li
